@@ -1,5 +1,5 @@
 APACHE 2.0 STATUS:						-*-text-*-
-Last modified at [$Date: 2001/11/17 14:02:25 $]
+Last modified at [$Date: 2001/11/19 13:48:57 $]
 
 Release:
 
@@ -291,8 +291,6 @@ RELEASE NON-SHOWSTOPPERS BUT WOULD BE REAL NICE TO WRAP THESE UP:
       into a VirtualHost container) to 2.0.
 
     * shift stuff to mod_core.h
-
-    * APR-ize resolver stuff in mod_unique_id (Jeff volunteers)
 
     * callers of ap_run_create_request() should check the return value
       for failure (Doug volunteers)
